sass/seedsource.scss
@import "~bulma/sass/utilities/initial-variables";

$primary: $blue;

@import '~bulma/bulma';
@import '~leaflet/dist/leaflet';
@import '~leaflet-basemaps/L.Control.Basemaps';
@import '~leaflet-geonames/L.Control.Geonames';
@import '~leaflet-zoombox/L.Control.ZoomBox';

$header-height: 52px;
$family-strong: "Arial Black", "Arial Bold", Gadget, sans-serif;
$tab-header-height: 58px;
$tab-header-height-nopadding: 42px;
$tab-content-height: calc(100vh - #{$header-height} - #{$tab-header-height});
$sidebar-width: 440px;

$directions: left top right bottom;
$spacings: 5 10 15;

@each $direction in $directions {
  @each $spacing in $spacings {
    .margin-#{$direction}-#{$spacing} {
      margin-#{$direction}: #{$spacing}px !important;
    }
  }
}

$icon-sizes: 12 16 18;
$icons: eye eye-closed crop contrast save load file trash clock chevron-top chevron-bottom;

@each $icon in $icons {
  @each $size in $icon-sizes {
    .icon-#{$icon}-#{$size} {
      background: url('../images/icon-#{$icon}.svg') no-repeat center center;
      width: #{$size}px;
      height: #{$size}px;
      display: inline-block;
      background-size: #{$size}px #{$size}px;
    }
  }
}

@each $name, $pair in $colors {
  $color: nth($pair, 1);

  .button.is-#{$name} {
    background: linear-gradient($color, darken($color, 5%));

    &:hover {
      background: linear-gradient(darken($color, 5%), darken($color, 7.5%));
    }
  }
}

/* IE fixes */
@include tablet {
  .modal-card {
    margin: 0;
  }
}

.modal-card-body {
  max-height: calc(100vh - 146px);
}
/* End IE fixes */

.table th {
  vertical-align: bottom;
}

.table td {
  padding: .5em .5em;
}

.navbar {
  position: fixed;
  width: 100%;
  z-index: 5;
}

.navbar-end > .navbar-item:last-child {
  margin-right: 10px;
}

.tabs:not(:last-child) {
  margin-bottom: 1em;
}

.seedsource-app > .columns {
  position: absolute;
  margin-top: $header-height;
  height: calc(100vh - #{$header-height});
  width: 100%;
}

@include touch {
  .navbar.is-active {
    position: fixed;
    top: 0;
    bottom: 0;
    width: 100%;

    +.columns {
      display: none;
    }

    .navbar-brand {
      position: fixed;
      width: 100%;
    }
    .navbar-menu {
      position: fixed;
      width: 100%;
      top: $header-height;
      bottom: 0;
      overflow: auto;
    }
  }

  .navbar-item:hover, .navbar-link:hover {
    color: $navbar-item-color !important;
    background-color: $navbar-background-color !important;
  }

  .tabs.is-boxed {
    position: fixed;
    width: 100%;
    top: $header-height;
    background-color: $white;
    z-index: 6;

    li.is-active-mobile a {
      color: $tabs-link-active-color;
      background-color: $tabs-boxed-link-active-background-color;
      border-color: $tabs-boxed-link-active-border-color;
      border-bottom-color: $tabs-boxed-link-active-border-bottom-color !important;
    }
  }
}

.align-middle {
  vertical-align: middle;
}

.badge {
  border-radius: 10px;
  padding: 3px 7px;
  background-color: #777;
  color: #fff;
  font-weight: bold !important;
  font-size: 0.75rem !important;
  vertical-align: middle;
  font-family: $family-strong;
}

.is-loading {
  @extend .button.is-loading;

  color: inherit !important;
}

.is-loading:after {
  @extend .button.is-loading:after;

  position: relative !important;
  left: 0;
  top: 0;
  vertical-align: middle;
  display: inline-block;
  margin-left: 10px;
}

.sidebar {
  box-shadow: 2px 0px 10px;
  z-index: 2; // Raise box shadow above leaflet map
}

@include mobile {
  .sidebar {
    width: 100%;
    position: absolute;
    box-shadow: none;
    background-color: #fff;
  }
}

.sidebar-inner {
  width: $sidebar-width;
}

@include mobile {
  .sidebar-inner {
    width: 100%;
  }
}

.sidebar .tab-content {
  position: relative;
  height: $tab-content-height;
  overflow: auto;
  padding: 0px 15px 0px 15px;
}

@include mobile {
  .sidebar .tab-content {
    margin-top: $tab-header-height;
    height: auto !important;
    min-height: $tab-content-height;
  }
}

.sidebar .overlay {
  position: fixed;
  top: #{$header-height + $tab-header-height};
  left: 0;
  right: 0;
  bottom: 0;
  width: $sidebar-width;
  height: $tab-content-height;
  background-color: rgba(255, 255, 255, .92);
  z-index: 5;
  padding: 0px 20px;
}

@include mobile {
  .sidebar .overlay {
    width: 100%;
  }
}

.sidebar .overlay progress {
  width: 100%;
}

.sidebar .overlay .progress-container {
  margin-right: 30px;
  margin-top: 50%;
}

@include mobile {
  .map {
    position: absolute;
    top: $tab-header-height-nopadding;
    bottom: 0;
    width: 100%;
    z-index: 0;
  }
}

.error-debug-info {
  max-height: 200px;
  overflow: auto;
}

.configuration-step {
  margin-bottom: 14px;
}

.configuration-step>h4 {
  font-size: 1.25rem;
  font-weight: bold;
}

.configuration-step .step-content {
  margin: 10px 0px 0px 25px;
}

.point-chooser .input {
  width: 85px;
  margin-right: 10px;
  text-align: right;
}

.modify-status {
  display: inline-block;
  width: 3px;
  background-color: rgba(0, 0, 0, 0);
  margin-right: 5px;
  margin-left: -.5em;
  transition: background-color .5s;
}

.modify-status.modified {
  background-color: #f0ad4e;
  transition: background-color .5s;
}

.transfer-reset {
  display: inline-block;
  color: #66F;
  cursor: pointer;
  font-size: .9em;
  float: right;
  margin-right: 5px;
}

.visibility-toggle {
  cursor: pointer;
  opacity: .6;
}

tr.visible .visibility-toggle, .visibility-toggle:hover {
  opacity: 1;
}

.variable-tooltip {
  box-shadow: 5px 5px 10px rgba(153, 153, 153, .6);
  font-size: 1.1em !important;
  max-width: 400px;
  white-space: normal;
}

.variable-tooltip strong, .variable-tooltip .title {
  color: #fff;
}

.variable-tooltip .tooltip-label {
  color: #999;
  margin-right: 8px;
}

.editable-label {
  border-bottom: 1.5px dashed blue;
  cursor: pointer;
  color: blue;
}

.editable-label.edit {
  border: 0;
  cursor: default;
  color: black;
}

.configuration-list {
  margin-left: -15px;
  margin-right: -15px;
}

.configuration-item {
  padding-left: 15px;
  border-top: 1px solid #D8D8D8;
  height: 45px;
}

.configuration-item:first-child {
  border-top: 0px;
}

.configuration-item.focused {
  background-color: #D9D9D9;
}

.configuration-item .save-title {
  font-weight: bold;
}

.configuration-item .save-date {
  font-style: italic;
  font-size: 0.8em;
}

.configuration-item .buttons {
  box-shadow: -2px 0px 5px -2px;
  width: 0px;
  transition: width .5s;
  overflow: hidden;
}

.configuration-item.focused .buttons {
  width: 80px;
}

.configuration-item .buttons .button {
  display: block;
  border: 0px;
  text-align: left;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  cursor: pointer;
  font-size: 14px;
  font-weight: bold;
  width: 80px;
  height: 22.5px;
  padding: 0px 0px 0px 5px;
  border-radius: 0;
}

.map-container {
  position: relative;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.time-overlay {
  z-index: 2;
  position: absolute;
  left: 20px;
  top: 20px;
  padding: 5px;
  border-radius: 5px;
  background: rgba(0, 0, 0, .8);
  color: #fff;
  font-size: 1.3em;
  font-weight: bold;
}

.map-info-popup {
  min-width: 150px;
}

.leaflet-opacity-control {
  width: 26px;
  background-color: #fff;
  font-size: 1.3em;
  text-align: center;
  padding-bottom: 5px;
  padding-top: 5px;
}

.leaflet-opacity-control input[type=range] {
  display: block;
  width: 100%;
  height: 150px;

  /*
   * -webkit-appearance is non-standard and may break in the future:
   * https://developer.mozilla.org/en-US/docs/Web/CSS/-moz-appearance
   * However, for now it's the only way to get a vertical range input on Chrome.
   */
  -webkit-appearance: slider-vertical;
}

/* Hack to target IE 10 & 11 */
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .leaflet-opacity-control {
    padding-bottom: 15px;
  }

  .leaflet-opacity-control input[type=range] {
    writing-mode: bt-lr;
    width: 45px;
    margin-left: -11px;
  }
}

.leaflet-button {
  width: 26px;
  background-color: #fff;
  font-size: 1.3em;
  text-align: center;
  padding-top: 5px;
}

.leaflet-button:hover {
  background-color: #eee;
  cursor: pointer;
}

.leaflet-legend {
  background-color: #fff;
  padding: 5px;
}

.leaflet-legend .title {
  margin-bottom: .5em;
}

.leaflet-legend .legend-item:not(:first-child) {
  margin-top: .5em;
}

.leaflet-legend td {
  line-height: 0;
}

.leaflet-legend td:last-child {
  padding-left: 5px;
  line-height: 1;
}

.leaflet-legend tbody tr:first-child td {
  vertical-align: top;
}

.leaflet-legend tbody tr:last-child td {
  vertical-align: bottom;
}

.leaflet-popup .map-info-popup button {
  width: 100%;
}

.leaflet-default-icon-path {
  background-image: url(../images/marker-icon.png);
}

@include mobile {
  .leaflet-legend,
  .leaflet-control.basemaps,
  .leaflet-opacity-control,
  .leaflet-geonames-search,
  .leaflet-zoom-box-control
  {
    display: none;
  }
}

